@@ -38,6 +38,75 @@
 		width: 800px;
 		border: 1px solid #333;
 	}
+	
+.flora .ui-dialog,
+.flora.ui-dialog {
+	background-color: #e6f7d4;
+}
+
+.flora .ui-dialog .ui-dialog-titlebar,
+.flora.ui-dialog .ui-dialog-titlebar {
+	border-bottom: 1px solid #d8d2aa;
+	background: #ff9900 url(i/dialog-title.gif) repeat-x;
+	padding: 0px;
+	height: 28px;
+	_height: 29px;
+}
+
+.flora .ui-dialog.ui-draggable .ui-dialog-titlebar,
+.flora.ui-dialog.ui-draggable .ui-dialog-titlebar {
+	cursor: move;
+}
+
+.flora .ui-dialog .ui-dialog-titlebar-close,
+.flora.ui-dialog .ui-dialog-titlebar-close {
+	width: 16px;
+	height: 16px;
+	background: url(i/dialog-titlebar-close.png) no-repeat;
+	position:absolute;
+	top: 6px;
+	right: 7px;
+	cursor: default;
+}
+
+.flora .ui-dialog .ui-dialog-titlebar-close span,
+.flora.ui-dialog .ui-dialog-titlebar-close span {
+	display: none;
+}
+
+.flora .ui-dialog .ui-dialog-titlebar-close-hover,
+.flora.ui-dialog .ui-dialog-titlebar-close-hover {
+	background: url(i/dialog-titlebar-close-hover.png) no-repeat;
+}
+
+.flora .ui-dialog .ui-dialog-title,
+.flora.ui-dialog .ui-dialog-title {
+	margin-left: 5px;
+	color: white;
+	font-weight: bold;
+	position: relative;
+	top: 7px;
+	left: 4px;
+}
+
+.flora .ui-dialog .ui-dialog-content,
+.flora.ui-dialog .ui-dialog-content {
+	margin: 1.2em;
+}
+
+.flora .ui-dialog .ui-dialog-buttonpane,
+.flora.ui-dialog .ui-dialog-buttonpane {
+	position: absolute;
+	bottom: 8px;
+	right: 12px;
+	width: 100%;
+	text-align: right;
+}
+
+.flora .ui-dialog .ui-dialog-buttonpane button,
+.flora.ui-dialog .ui-dialog-buttonpane button {
+	margin: 6px;
+}
 </style>
 <script>
 var _PLEASE_WAIT = '###MSG.WAIT###';
@@ -99,10 +168,10 @@ var _GROUP_ID    = '###FORM.GROUP_UID###';
 				</tr>
 				<!-- ###LOOP:MEMBERS### begin -->
 				<!-- ###LOOP_CONTENT### -->
-				<tr>
+				<tr class="memberRow###MEMBER_UID###">
 					<td>###MEMBER_NAME###</td>
 					<td>###MEMBER_STATUS###</td>
-					<td>###MEMBER_ACTION###</td>
+					<td>###MEMBER_ACTIONS###</td>
 				</tr>
 				<!-- ###LOOP_CONTENT### -->
 				<!-- ###LOOP:MEMBERS### end -->
@@ -124,6 +193,14 @@ var _GROUP_ID    = '###FORM.GROUP_UID###';
 		</form>
 	</div>
 	<!-- ###INVITE_MEMBER### end -->
+	
+	<div id="makeAdminDialog" title="###LLL:editgroup_dialog_makeAdmin_title###">
+		<p>###LLL:editgroup_dialog_makeAdmin_message###</p>
+	</div>
+	
+	<div id="removeMemberDialog" title="###LLL:editgroup_dialog_removeMember_title###">
+		<p>###LLL:editgroup_dialog_removeMember_message###</p>
+	</div>
 <!-- ###GROUP_SETTINGS### end -->
 
 
